Fix nav and intro section overflow

--- a/styles/media-queries.css
+++ b/styles/media-queries.css
@@ -1,5 +1,6 @@
 @media screen and (min-width: 768px) {
 	.header {
+		padding: var(--header-block-padding) var(--section-inline-padding);
 		box-shadow: 0 0 0 2px rgba(0, 0, 0, 0.25);
 	}
 	.icon {
@@ -10,6 +11,9 @@
 		justify-content: space-between;
 		align-items: center;
 		background-color: #FFF;
+	}
+	.nav__mobile {
+		padding: 0;
 	}
 	.nav__menu {
 		width: 80%;
@@ -50,7 +54,8 @@
 	/******************************/
 	.intro__section {
 		position: relative;
-		overflow: hidden;
+		padding-top: 6rem;
+		overflow-x: clip;
 	}
 	.intro__section:after {
 		content: url(../images/bg-pattern-intro-right-desktop.svg);
@@ -193,6 +198,9 @@
 @media screen and (min-width: 1200px) {
 	.btn {
 		padding: 1rem 3rem;
+	}
+	.intro__section {
+		padding-top: 3rem;
 	}
 	.intro__section:after {
 		top: 0;
